@@ -867,6 +867,7 @@ libgnomecanvas is missing branch definition for gnome-2-20
 	<arg>-a</arg>
 	<arg>-r</arg>
 	<arg>-s</arg>
+	<arg>--start-at=<replaceable>module</replaceable></arg>
 	<arg>--tags=<replaceable>tags</replaceable></arg>
 	<arg>--ignore-suggests</arg>
 	<arg>--list-optional-modules</arg>
@@ -902,6 +903,15 @@ libgnomecanvas is missing branch definition for gnome-2-20
 	  <listitem>
 	    <simpara>Ignore the named modules when following
 	    dependencies to expand the list of modules.</simpara>
+	  </listitem>
+	</varlistentry>
+
+	<varlistentry>
+	  <term><option>-t</option>,
+	  <option>--start-at</option>=<replaceable>module</replaceable></term>
+	  <listitem>
+	    <simpara>Show only the modules listed after the given
+            <replaceable>module</replaceable>.</simpara>
 	  </listitem>
 	</varlistentry>
 
