@@ -1,3 +1,9 @@
+2008-12-23  Paolo Borelli  <pborelli@katamail.com>
+
+	* jhbuild/commands/base.py:
+	* doc/C/jhbuild.xml:
+	Add a "--start-at" option to the list command and document it.
+
 2008-12-23  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/bootstrap.modules, patches/python-2.5.2-lib64.patch:
